--- a/X_and_Co/compton.conf
+++ b/X_and_Co/compton.conf
@@ -11,7 +11,7 @@ shadow-exclude = [ "name *= 'VLC'", "name *= 'compton'", "name *= 'Firefox'", "c
 shadow-ignore-shaped = false;
 
 # opacity
-inactive-opacity = 1.0; #0.80;
+inactive-opacity = 0.80;
 active-opacity = 1.0; #0.92;
 frame-opacity = 1.0; #0.7;
 inactive-opacity-override = true;
