--- a/Xstuff/compton.conf
+++ b/Xstuff/compton.conf
@@ -1,14 +1,16 @@
 # Shadow
-shadow = true;
-no-dnd-shadow = true;
-no-dock-shadow = true;
-clear-shadow = true; # zero the part of the shadow's mask behind the window
-shadow-radius = 7;
-shadow-offset-x = -7;
-shadow-offset-y = -7;
-shadow-opacity = 0.7;
-shadow-exclude = [ "name *= 'VLC'", "name *= 'compton'", "name *= 'Firefox'", "class_g = 'Conky'", "class_g = 'Gimp'"];
-shadow-ignore-shaped = false;
+shadow = false;
+# shadow = true;
+# no-dnd-shadow = true;
+# no-dock-shadow = true;
+# clear-shadow = true; # zero the part of the shadow's mask behind the window
+# shadow-radius = 7;
+# shadow-offset-x = -7;
+# shadow-offset-y = -7;
+# shadow-opacity = 0.7;
+# shadow-exclude = [ "name *= 'VLC'", "name *= 'compton'", "name *= 'Firefox'", "class_g = 'Conky'", "class_g = 'Gimp'"];
+# shadow-exclude = ["class_g = 'conky'"]
+# shadow-ignore-shaped = false;
 
 # opacity
 inactive-opacity = 0.80;
