--- a/Xstuff/picom.conf
+++ b/Xstuff/picom.conf
@@ -1,6 +1,6 @@
 # Shadow
-shadow = false;
-# shadow = true;
+# shadow = false;
+shadow = true;
 # no-dnd-shadow = true;
 # no-dock-shadow = true;
 # clear-shadow = true; # zero the part of the shadow's mask behind the window
@@ -13,7 +13,7 @@ shadow = false;
 # shadow-ignore-shaped = false;
 
 # opacity
-inactive-opacity = 0.80;
+inactive-opacity = 0.70;
 active-opacity = 1.0; #0.92;
 frame-opacity = 1.0; #0.7;
 inactive-opacity-override = true;
@@ -26,6 +26,6 @@ fade-out-step = 0.03;
 
 mark-wmwin-focused = true;
 mark-ovredir-focused = true;
-use-ewmh-active-win = true;
+use-ewmh-active-win = false;
 detect-rounded-corners = true;
 detect-client-opacity = true;
