minor changes for ATS needs

--- a/Xstuff/10-monitor.conf
+++ b/Xstuff/10-monitor.conf
@@ -1,4 +1,5 @@
 Section "Monitor"
-	Identifier "VGA-1"
-	Option "PreferredMode" "1920x975"
+        Identifier "Virtual-1"
+        Modeline "1920x975"  155.25  1920 2040 2240 2560  975 978 988 1012 -hsync +vsync
+        Option "PreferredMode" "1920x975"
 EndSection
