--- a/Xstuff/tmux/tmux.conf
+++ b/Xstuff/tmux/tmux.conf
@@ -1,8 +1,13 @@
 unbind C-b
-set -g prefix C-a
-bind C-a send-prefix
+set -g prefix C-Space
+bind C-Space send-prefix
 
+# indexing starts at 1
 set -g base-index 1
+setw -g pane-base-index 1
+set -g renumber-windows on
+
+set -g mouse off
 
 # Status line colors
 set -g status-bg "color4"         # blue background
@@ -10,9 +15,21 @@ set -g status-fg "color7"         # gray text color
 set -g status-right "%l:%M %p"    # time format
 set-window-option -g window-status-current-style "bg=color75,fg=color231 bold"    # current window background + foreground colors
 
-# Configura una nuova sessione con due pannelli
+# Custom Keys
+bind-key "|" split-window -h -c "#{pane_current_path}"
+bind-key "\\" split-window -fh -c "#{pane_current_path}"
 
-# bind-key w new-window -n my_workspace \; split-window -v "btop" \; select-pane -t 1 \; send-keys "ctop" C-m
+bind-key "-" split-window -v -c "#{pane_current_path}"
+bind-key "_" split-window -fv -c "#{pane_current_path}"
+
+# kill utils
+bind-key k kill-session
+bind-key K kill-server
+
+# launch monitor session
+bind-key w neww -n monitor btop \; splitw -h -p 30 sudo iotop -o \; splitw -fv atop \; splitw -h -p 30 sudo iftop
 
 
-# bind-key w new-window -n monitor btop \; split-window -h -p 70 -t 0 top \; select-window -t 1 \; select-pane -t 0
+# force a reload of the config file
+unbind r
+bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded tmux config!"
